apps/router-reverse-proxy/endpoint.yaml
kind: EndpointSlice
apiVersion: discovery.k8s.io/v1
metadata:
  name: &name router-reverse-proxy
  namespace: apps
  labels:
    kubernetes.io/service-name: *name
addressType: IPv4
ports:
  - name: http
    port: 80
    protocol: TCP
endpoints:
  - addresses:
      - ${ROUTER_IP}
    conditions:
      ready: true
