apps/router-reverse-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-reverse-proxy
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: "${PRIVATE_IP}"
    nginx.ingress.kubernetes.io/whitelist-source-range: ${PRIVATE_WHITELIST}
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: &host router.lab.${BASE_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: router-reverse-proxy
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: letsencrypt-router-reverse-proxy
